No public description
PiperOrigin-RevId: 826461260