@@ -74,8 +74,7 @@ public final class DirectInvocationOnMock extends BugChecker implements Compilat
         if (THEN_CALL_REAL_METHOD.matches(tree, state)) {
           var receiver = getReceiver(tree);
           if (receiver != null && WHEN.matches(receiver, state)) {
-            ExpressionTree firstArgument =
-                ((MethodInvocationTree) receiver).getArguments().getFirst();
+            ExpressionTree firstArgument = ((MethodInvocationTree) receiver).getArguments().get(0);
             if (getSymbol(firstArgument) instanceof MethodSymbol methodSymbol) {
               methodsCallingRealImplementations.add(methodSymbol);
             }
