@@ -228,7 +228,7 @@ public class MissingFail extends BugChecker implements TryTreeMatcher {
   public Description matchTry(TryTree tree, VisitorState state) {
     if (tryTreeMatches(tree, state)) {
       List<? extends StatementTree> tryStatements = tree.getBlock().getStatements();
-      StatementTree lastTryStatement = tryStatements.getLast();
+      StatementTree lastTryStatement = tryStatements.get(tryStatements.size() - 1);
 
       Optional<Fix> assertThrowsFix =
           AssertThrowsUtils.tryFailToAssertThrows(tree, tryStatements, Optional.empty(), state);
